lib/src/compiler/tests/testdata/errors/42.out
error[E113]: mixing greedy and non-greedy quantifiers in regular expression
 --> line:3:15
  |
3 |     $a = /a.*b.*?c/
  |               ^^^ this is non-greedy
  |            ^^ this is greedy
  |